feat(core): Implement decentralized configuration model
Refactors the entire configuration system to be fully decentralized,
addressing the 4KB NVS value size limitation and significantly
improving modularity and scalability. This is a major architectural
change, moving the framework to version 5.0.0.

BREAKING CHANGE: The configuration loading mechanism has been fundamentally
overhauled. The monolithic `system_config.json` is deprecated for module
definitions.

Key Changes:

1.  **Decentralized Configuration Files:**
    -   Each module now contains its own `config.json` file, defining its
        default runtime configuration. This makes modules self-contained.
    -   The root `configs/system_config.json` now only contains global
        parameters (`firmware`, `global_config`) and an empty `modules` array,
        serving as a base template.

2.  **Build System Automation (`collect_configs.cmake`):**
    -   A new CMake script (`collect_configs.cmake`) has been introduced.
    -   It automatically discovers all `config.json` files within the
        `components/modules/` directory during the build process.
    -   It embeds each found config file into the firmware binary under a
        unique symbol name (e.g., `_binary_relay_actuator_config_json_start`).
    -   It auto-generates an `embedded_configs.h` header file, which acts as
        a manifest of all embedded configurations, making them accessible
        from C code.

3.  **Config Manager (`config_manager.c`) Refactor:**
    -   The `load_config_from_defaults()` function has been completely
        rewritten. On first boot (or when NVS is empty), it now:
        a. Loads the base `system_config.json`.
        b. Iterates through the `embedded_configs.h` manifest.
        c. Parses each module's `config.json` and dynamically assembles
           the full configuration tree in memory.
    -   The `save_config_to_nvs()` function now saves this fully assembled
        configuration to a single key in NVS. Th

--- a/components/core/CMakeLists.txt
+++ b/components/core/CMakeLists.txt
@@ -9,36 +9,39 @@ set(SRCS
     "event_data_wrapper.c"
     "service_locator.c"
     "event_payloads.c"
+    "module_helpers.c"
 )
 
-# ჩასვით სკრიპტი, რომელიც ავტომატურად აღმოაჩენს მოდულებს და გენერირებს factory-ს.
-# ეს სკრიპტი მშობელ scope-ში განსაზღვრავს რამდენიმე ცვლადს, მათ შორის
-# COLLECTED_MODULE_DEPENDENCIES-ს და სხვა factory-ს გენერაციისთვის საჭირო ცვლადებს.
+# --- Synapse Build Automation ---
+
+# ჩასვით და გაუშვით სკრიპტი, რომელიც აგროვებს დეცენტრალიზებულ კონფიგურაციებს
+include(${CMAKE_CURRENT_LIST_DIR}/collect_configs.cmake)
+collect_and_prepare_module_configs() # ეს ფუნქცია განსაზღვრავს COLLECTED_EMBED_FILES ცვლადს
+
+# ჩასვით სკრიპტი, რომელიც აგროვებს მოდულებს და აგენერირებს factory-ს
 include(${CMAKE_CURRENT_LIST_DIR}/collect_modules.cmake)
 
-# ჩასვით სკრიპტი, რომელიც აგროვებს MQTT თემებს მოდულებიდან და ქმნის ცენტრალიზებულ header-ს
+# ჩასვით სკრიპტი, რომელიც აგროვებს MQTT თემებს
 include(${CMAKE_CURRENT_LIST_DIR}/collect_mqtt_topics.cmake)
-
-# გენერაცია MQTT თემების header ფაილის module.json-ებიდან
 collect_mqtt_topics()
 
-# collect_modules სკრიპტი აგენერირებს ამ C ფაილს, ამიტომ უნდა დავამატოთ ჩვენს წყაროებში.
+# დაამატეთ ავტომატურად გენერირებული factory წყაროების სიას
 list(APPEND SRCS "${CMAKE_CURRENT_BINARY_DIR}/generated_module_factory.c")
 
-# დაარეგისტრირეთ კომპონენტი მის წყარო ფაილებთან და დამოკიდებულებებთან ერთად.
-# შენიშვნა: არჩევითი მოდულების პირდაპირი დამოკიდებულებები ამოღებულია.
-# Build სისტემა ამ დამოკიდებულებებს გადმოიღებს ტრანზიტიულად გენერირებული factory ფაილის include-ებიდან.
+# --- კომპონენტის რეგისტრაცია ---
 idf_component_register(SRCS ${SRCS}
-                    INCLUDE_DIRS "include" "${CMAKE_CURRENT_BINARY_DIR}"
-                    EMBED_FILES "../../configs/system_config.json"
-                    REQUIRES esp_event
-                             nvs_flash
-                             json
-                             driver
-                             esp_wifi
-                             interfaces
-                             # esp_tls # ეს დამოკიდებულება მხოლოდ იმ მოდულს უნდა დაემატოს, რომელსაც ეს სჭირდება და არა core-ს.
-                             # ყველა აღმოჩენილი მოდული დაემატოს build-time დამოკიდებულებად,
-                             # რათა build სისტემამ იცოდეს მათი header-ების მდებარეობა.
-                             ${COLLECTED_MODULE_DEPENDENCIES}
+                    INCLUDE_DIRS
+                        "include"
+                        "${CMAKE_CURRENT_BINARY_DIR}" # დაამატეთ build დირექტორია გენერირებული ჰედერებისთვის
+                    EMBED_FILES
+                        "../../configs/system_config.json" # ბაზისური კონფიგურაცია
+                        ${COLLECTED_EMBED_FILES}           # შეგროვებული მოდულების კონფიგურაციები
+                    REQUIRES
+                        esp_event
+                        nvs_flash
+                        json
+                        driver
+                        esp_wifi
+                        interfaces
+                        ${COLLECTED_MODULE_DEPENDENCIES}
 )
