feat(system): Implement full SNTP support in time_sync module
This commit transforms the `time_sync` module from a simple mock into a fully functional SNTP client, enabling automatic and accurate time synchronization for the device. This enhancement provides the UI and other system components with reliable, timezone-aware timestamps.

**Key Changes:**

-   **Implemented SNTP Client:** The `time_sync` module now uses the `esp_sntp` component to synchronize with an NTP server (`pool.ntp.org`) automatically after a WiFi IP address is obtained.

-   **Added Timezone Support:**
    -   A `timezone` parameter has been added to the `time_sync` module's `config.json`.
    -   The module now sets the standard `TZ` environment variable based on this configuration, allowing C library functions like `localtime_r` to perform correct UTC-to-local-time conversions.

-   **Improved UI Time Display:**
    -   The `ui_manager` now correctly handles the time synchronization state. It displays `"--:--"` on the home screen until the `time_sync` service reports a successful sync.
    -   The digits-only font used by the UI has been updated to include the hyphen character (`-`) to properly render the `"--:--"` placeholder.

This feature eliminates the need for an external RTC hardware module and provides a robust, network-based timekeeping solution for the framework.

--- a/components/modules/system/time_sync/CMakeLists.txt
+++ b/components/modules/system/time_sync/CMakeLists.txt
@@ -22,8 +22,10 @@ if(NOT DEFINED CONFIG_MODULE_TIME_SYNC_ENABLED OR CONFIG_MODULE_TIME_SYNC_ENABLE
             REQUIRES 
                 core 
                 interfaces
+                esp_netif
         PRIV_REQUIRES
             json
+            lwip
     )
 else()
     # მოდული გამორთულია
