--- a/components/modules/system/time_sync/config.json
+++ b/components/modules/system/time_sync/config.json
@@ -3,7 +3,8 @@
     "type": "time_sync",
     "enabled": true,
     "config": {
-      "instance_name": "main_time_sync"
+      "instance_name": "main_time_sync",
+      "timezone": "CET-1CEST,M3.5.0,M10.5.0/3"
     }
   }
 ]
