feat(ble_prov): Generate dynamic device name using Identity Service
The BLE advertising name is now dynamically generated by combining a prefix from Kconfig with the unique device ID obtained from the Device Identity Service. This ensures each device has a unique and identifiable name during provisioning (e.g., "Synapse-5C013B4A9954").

Architectural Fixes:
- Resolves a critical race condition by moving the service-dependent logic from the `_create` function to the `_init` phase. This guarantees that the Device Identity Service is registered before it is accessed.
- Adjusted `init_level` values (`device_identity_service`: 20, `ble_provisioning`: 90) to enforce the correct initialization order as per the framework's provider/consumer pattern.
- Replaced the hardcoded `fmw_service_get("main_identity_service")` call with the more robust and decoupled `fmw_service_lookup_by_type` to improve module isolation.

Code Quality:
- Added comprehensive Doxygen comments to all functions to align with the project's production-ready coding standards.
- Updated the module's README to reflect the new dynamic naming behavior and architectural principles.

--- a/components/modules/provisioning/ble_provisioning/Kconfig
+++ b/components/modules/provisioning/ble_provisioning/Kconfig
@@ -25,7 +25,7 @@ menu "BLE Provisioning"
 
         config ESP_PROV_DEVICE_NAME
             string "BLE Device Name"
-            default "Synapse-Prov"
+            default "Synapse"
             help
                 Device name that will appear during BLE scanning
 
