feat(sensors): Add driver for VL6180X Time-of-Flight sensor
Introduces a new, fully integrated module for the VL6180X ToF distance sensor. The driver operates in polling mode, providing a solid foundation for distance measurement capabilities within the framework.

Key Features:
- **I2C Communication:** Leverages the `i2c_bus` service to communicate with the sensor, performing a full initialization sequence based on the official datasheet.
- **Periodic Measurements:** Utilizes the `system_timer` service to periodically trigger distance readings at a configurable interval.
- **Event Publishing:** Publishes measurement results in millimeters to the Event Bus using the standardized `SENSOR_DATA_DISTANCE_MM` event.
- **Ecosystem Integration:** The published event is designed to be consumed by the `sensor_aggregator` module, enabling seamless data aggregation and forwarding via MQTT.

This commit establishes the baseline functionality for the TOF sensor, with plans to enhance it with interrupt-driven measurements in the future.

--- a/components/modules/sensors/sensor_aggregator/config.json
+++ b/components/modules/sensors/sensor_aggregator/config.json
@@ -26,9 +26,9 @@
                 }
             },
             {
-                "event_name": "SENSOR_DATA_LIGHT",
-                "json_key": "light_lux",
-                "aggregation_mode": "max"
+                "event_name": "SENSOR_DATA_DISTANCE_MM",
+                "json_key": "distance_mm",
+                "aggregation_mode": "last"
             }
         ]
       }
