feat(drivers): add SPI bus and SN74HC595N driver, refactor RGB LED
This commit introduces a major architectural enhancement by adding a foundational SPI communication layer and a new shift register driver, enabling significant hardware expansion capabilities.

### Added

- **`spi_bus` Module:**
  - A new, fundamental driver module that provides a centralized, thread-safe, and resource-managed service for a hardware SPI bus.
  - It locks the SPI host and GPIO pins via the `ResourceManager` to prevent conflicts.
  - Exposes a `spi_bus_api_t` service via the `ServiceLocator` for other modules to add devices and perform transactions.

- **`sn74hc595n_writer` Module:**
  - A new driver module for the SN74HC595N shift register, designed to expand digital output pins.
  - It acts as a service consumer for the `spi_bus` module.
  - Supports daisy-chaining multiple chips for scalability.
  - Exposes a `sn74hc595n_writer_api_t` service to abstract pin control logic (`set_pin_state`, `set_chip_pins`).

### Changed

- **`rgb_led_indicator` Module Refactoring:**
  - The module has been completely refactored to operate on top of the new `sn74hc595n_writer` service instead of directly controlling GPIO pins with the `ledc` driver.
  - This change fully decouples the high-level indicator logic from the underlying hardware implementation, demonstrating the power of the framework's service-oriented architecture.
  - The `PULSE` effect logic has been adapted for digital outputs, now performing a slow blink.

### Documentation

- Created comprehensive `README.md` files for the new `spi_bus` and `sn74hc595n_writer` modules.
- Added new interface headers (`spi_bus_interface.h`, `sn74hc595n_writer_interface.h`) and updated `service_types.h`.
- Updated the `rgb_led_indicator` module's `README.md` to reflect its new architecture.

This set of changes marks the beginning of version 6.0.0, significantly expanding the framework's hardware interface capabilities.

--- a/components/modules/sensors/time_of_flight_sensor/config.json
+++ b/components/modules/sensors/time_of_flight_sensor/config.json
@@ -1,7 +1,7 @@
 [
   {
     "type": "time_of_flight_sensor",
-    "enabled": true,
+    "enabled": false,
     "config": {
         "instance_name": "main_tof_sensor",
         "i2c_bus_name": "main_i2c_bus",
