feat(drivers): add MCP23017 driver, refactor button_input for expander support
This commit significantly enhances the framework's I/O capabilities by introducing a driver for the MCP23017 I2C I/O expander and refactoring the `button_input` module to be hardware-agnostic.

### Added

- **`mcp23017_io_expander` Module:**
  - A new, powerful driver module providing control over the MCP23017 16-bit I/O expander via the `i2c_bus` service.
  - Adds up to 16 programmable input/output pins to the system.
  - Exposes a comprehensive, GPIO-like `mcp23017_api_t` service for setting pin direction, pull-ups, and reading/writing levels.

### Changed

- **`button_input` Module Refactoring:**
  - The module is now universal and can operate in two modes, configurable via `config.json`:
    1.  **`gpio` mode (default):** Uses native ESP32 GPIO interrupts for low-latency input.
    2.  **`expander` mode:** Uses the new `mcp23017_io_expander` service to read button states via polling.
  - This change demonstrates the framework's hardware abstraction capabilities, allowing high-level modules like `ui_manager` to function without any modification, regardless of the underlying button hardware.
  - The debouncing logic has been improved and unified for both modes to ensure reliable press detection.

### Documentation

- Created a comprehensive `README.md` for the new `mcp23017_io_expander` module, including detailed pinout diagrams, logical pin mapping, and wiring instructions.
- Added the `mcp23017_interface.h` header and updated `service_types.h`.
- Updated the `button_input` module's `README.md` to reflect its new dual-mode architecture and expander configuration options.

--- a/components/modules/drivers/button_input/config.json
+++ b/components/modules/drivers/button_input/config.json
@@ -4,20 +4,22 @@
     "enabled": true,
     "config": {
       "instance_name": "main_buttons",
+      "control_type": "expander",
+      "expander_service": "main_io_expander",
       "buttons": [
         {
           "name": "UP",
-          "gpio_pin": 26,
+          "expander_pin": 13,
           "active_level": 0
         },
         {
           "name": "DOWN",
-          "gpio_pin": 27,
+          "expander_pin": 14,
           "active_level": 0
         },
         {
           "name": "OK",
-          "gpio_pin": 32,
+          "expander_pin": 15,
           "active_level": 0
         }
       ]
