Refactor code structure for improved readability and maintainability

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ cmake_install.cmake
 build.ninja
 
 # ESP-IDF generated files
-sdkconfig
+# sdkconfig
 sdkconfig.old
 sdkconfig.*
 project_description.json
