refactor(core, modules): implement robust DI and resolve critical stability issues
This commit introduces a series of major architectural improvements and critical bug fixes to enhance the framework's stability, reliability, and developer experience. It resolves persistent `Stack Overflow` and `Memory Corruption` errors by refactoring core mechanisms and key modules.

### 1. Architectural Improvements: Safe Dependency Injection

- **feat(core):** Implemented a new, safe, and explicit Dependency Injection (DI) mechanism based on a `dependency_map`.
  - Modules now declare their service dependencies in a static `dependency_map` array within their source code.
  - The `System Manager` uses this map and `offsetof()` to safely inject service handles into the correct fields of a module's `private_data` struct, completely eliminating the risk of memory corruption from the previous, unsafe injection method.
  - The startup sequence in `fmw_system_start` has been optimized to perform injection and initialization in a single, sequential loop, correctly respecting `init_level` priorities.

### 2. Stability Fixes: Task Offloading & Memory Management

- **refactor(ui_manager):** Offloaded all heavy UI logic (menu population, rendering) to a dedicated FreeRTOS task (`ui_task`).
  - This resolves the critical `Stack Overflow in task Tmr Svc` panic that occurred when UI operations were triggered from a timer callback.
- **refactor(wifi_manager):** Refactored the module to use a dedicated task (`wifi_task`) for connection management.
  - Blocking functions like `esp_wifi_connect()` are no longer called from timer callbacks, fixing another source of `Stack Overflow` during reconnection cycles.
- **perf(core, ui, wifi):** Optimized memory management in high-frequency operations to reduce heap fragmentation and prevent memory leaks.
  - Replaced dynamic memory allocation (`malloc`/`calloc`) with static buffers for event payloads in `wifi_cmd_handler` and `ui_events_handle`.
  - Fixed a

--- a/components/core/CMakeLists.txt
+++ b/components/core/CMakeLists.txt
@@ -1,15 +1,15 @@
 # ძირითადი კომპონენტის წყარო ფაილების სია
 set(SRCS
-    "event_bus.c"
-    "config_manager.c"
-    "system_manager.c"
-    "module_registry.c"
-    "module_factory.c"
-    "resource_manager.c"
-    "event_data_wrapper.c"
-    "service_locator.c"
-    "event_payloads.c"
-    "module_helpers.c"
+    "src/config_manager.c"
+    "src/event_bus.c"
+    "src/event_data_wrapper.c"
+    "src/event_payloads.c"
+    "src/module_factory.c"
+    "src/module_helpers.c"
+    "src/module_registry.c"
+    "src/resource_manager.c"
+    "src/service_locator.c"
+    "src/system_manager.c"
 )
 
 # --- Synapse Build Automation ---
