feat(core): add and document asynchronous promise manager
Introduces a powerful, promise-based mechanism for managing asynchronous
request-response patterns within the framework's core. This provides a
cleaner and more structured alternative to event-driven workflows for
operations that expect a direct result.

Key features of the new Promise Manager:
- A dedicated FreeRTOS task ensures all callbacks execute in a safe,
  isolated context, preventing stack overflows in system tasks.
- A consumer-facing API (`fmw_promise_then`, `fmw_promise_catch`) enables
  modules to write more readable and maintainable asynchronous code.
- An internal API (`fmw_promise_create`, `fmw_promise_resolve`) allows
  service providers to easily create and fulfill promises.

Adds comprehensive documentation for the new pattern:
- Creates `promise_pattern.md` to explain the convention and use cases.
- Creates `promise_api.md` for a detailed API reference.
- Updates `communication_patterns.md`, `api_index.md`, and other
  relevant documents to integrate the new concept.

--- a/components/core/CMakeLists.txt
+++ b/components/core/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SRCS
     "src/event_bus.c"
     "src/event_data_wrapper.c"
     "src/event_payloads.c"
+    "src/promise_manager.c"
     "src/module_factory.c"
     "src/module_helpers.c"
     "src/module_registry.c"
