--- a/components/modules/utilities/ui_manager/config.json
+++ b/components/modules/utilities/ui_manager/config.json
@@ -4,7 +4,9 @@
     "enabled": true,
     "config": {
       "instance_name": "main_ui_manager",
-      "display_driver_service": "main_ssd1306_driver"
+      "display_driver_service": "main_ssd1306_driver",
+      "wifi_service": "main_wifi_manager",
+      "wifi_module_handle": "main_wifi_manager"
     }
   }
 ]
