refactor(core, wifi): introduce and apply modular source code structure
Implements a new, standardized architecture for structuring module source
code to improve readability, maintainability, and scalability.

Key architectural changes:
- **Source Code Splitting:** Large, monolithic module `.c` files are now
  split into logical units based on responsibility (e.g., `_api.c`,
  `_cmd.c`, `_events.c`).
- **Internal Header (`_internal.h`):** Introduces the concept of a
  private internal header for sharing types and function declarations
  within a module's source files without polluting the public API.
- **Pilot Refactoring:** The `wifi_manager` module has been fully
  refactored to serve as the blueprint for this new structure.

Documentation Updates:
- The `module_structure.md` convention document has been completely
  overhauled to reflect these new standards, including updated
  `CMakeLists.txt` templates and best practices.

--- a/components/modules/communications/wifi_manager/CMakeLists.txt
+++ b/components/modules/communications/wifi_manager/CMakeLists.txt
@@ -16,6 +16,9 @@ if(DEFINED CONFIG_MODULE_WIFI_MANAGER_ENABLED)
         message(STATUS "Wifi_Manager Module: ENABLED - კომპილირდება სრული ფუნქციონალით")
         idf_component_register(
             SRCS "src/wifi_manager.c"
+                "src/wifi_manager_api.c"
+                "src/wifi_manager_cmd.c"
+                "src/wifi_manager_events.c"
             INCLUDE_DIRS "include"
             REQUIRES 
                 core 
