feat(core): implement graceful shutdown and resolve deinit issues
This commit introduces a major architectural improvement by implementing a
robust, system-wide graceful shutdown mechanism. It also resolves a series
of critical memory management and deadlock issues discovered during the
deinitialization process.

Key Features & Fixes:

- **feat(core): Graceful Shutdown Manager**
  - The System Manager now deinitializes all modules in the reverse
    order of their `init_level` upon a reboot command.
  - A timeout mechanism is implemented for each module's `deinit` to
    prevent a single stuck module from halting the entire system.

- **refactor(core): Centralized Memory Management**
  - Modules now `cJSON_Duplicate` their configuration at creation time
    to ensure true isolation.
  - The responsibility for freeing the `module_t` struct is now
    centralized in the System Manager, fixing `Use-After-Free` errors.

- **fix(rotary_encoder):** Resolves a deadlock in the `rotary_encoder`
  deinit function by implementing a graceful, signal-based task stop
  instead of a forced `vTaskDelete`.

- **refactor(cmd_router):**
  - Updates the console initialization to use the modern, non-deprecated
    VFS UART APIs for ESP-IDF v5.4, eliminating build warnings.
  - Improves the deinit logic to prevent deadlocks with the UART driver.

--- a/components/core/Kconfig
+++ b/components/core/Kconfig
@@ -83,6 +83,15 @@
             help
                 მოდულის `instance_name`-ის მაქსიმალური დასაშვები სიგრძე (სიმბოლოებში).
 
+        config SYNAPSE_DEINIT_TIMEOUT_MS
+            int "Module deinit timeout (ms)"
+            default 500
+            range 100 5000
+            help
+                Timeout in milliseconds for a module's deinit function to complete
+                during a graceful shutdown. If a module's deinit takes longer
+                than this, it will be considered stuck, and the shutdown will proceed.
+
     endmenu
 
     menu "ოპტიმიზაცია და მეხსიერება"
