feat(core): add shared task pool manager for resource optimization
Introduces a new core component, the Shared Task Pool Manager, to
provide a centralized and resource-efficient way of handling background
and periodic tasks.

This addresses the challenge of excessive RAM consumption caused by
numerous modules creating their own individual tasks for simple,
infrequent operations.

Key Features:
- **Worker Task Pool:** Creates a configurable number of worker tasks
  at startup to serve job requests from any module.
- **Job Scheduling API:** Exposes a simple API (`synapse_task_pool_schedule_job`,
  `synapse_task_pool_cancel_job`) for scheduling one-shot or periodic
  functions to be executed by the pool.
- **Resource Efficiency:** Drastically reduces the number of active tasks
  and the overall stack memory usage of the system, improving scalability
  for applications with many small modules (e.g., sensors).
- **Simplified Development:** Abstracts away the complexity of FreeRTOS
  task management for module developers.

--- a/components/core/CMakeLists.txt
+++ b/components/core/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SRCS
     "src/resource_manager.c"
     "src/service_locator.c"
     "src/system_manager.c"
+    "src/task_pool_manager.c"
 )
 
 # --- Synapse Build Automation ---
