--- a/components/modules/drivers/rotary_encoder_input/Kconfig
+++ b/components/modules/drivers/rotary_encoder_input/Kconfig
@@ -4,23 +4,8 @@ menu "Rotary Encoder Input"
         bool "Enable Rotary Encoder Input Module"
         default y
         help
-            Enables the rotary_encoder_input module for A universal module to handle rotary encoder input and publish standard navigation events..
+            Enables the rotary_encoder_input module for handling rotary encoder inputs.
 
-    config ROTARY_ENCODER_INPUT_DEFAULT_INSTANCE_NAME
-        string "Default Instance Name"
-        default "main_rotary_encoder_input"
-        depends on MODULE_ROTARY_ENCODER_INPUT_ENABLED
-        help
-            Default instance name for the rotary_encoder_input module.
-
-    config ROTARY_ENCODER_INPUT_INSTANCE_NAME_MAX_LEN
-        int "Maximum Instance Name Length"
-        default 32
-        range 8 64
-        depends on MODULE_ROTARY_ENCODER_INPUT_ENABLED
-        help
-            Maximum length for the rotary_encoder_input module instance name string.
-    
     config ROTARY_ENCODER_MAX_INSTANCES
         int "Maximum number of encoder instances"
         default 4
@@ -28,21 +13,7 @@ menu "Rotary Encoder Input"
         depends on MODULE_ROTARY_ENCODER_INPUT_ENABLED
         help
             Sets the maximum number of rotary encoder instances that can be
-            configured and run simultaneously. This affects the memory allocated
-            for managing them.
-
-    config ROTARY_ENCODER_TASK_STACK_SIZE
-        int "Shared Task Stack Size"
-        default 3072
-        depends on MODULE_ROTARY_ENCODER_INPUT_ENABLED
-        help
-            Stack size for the single, shared task that processes all rotary encoders.
-
-    config ROTARY_ENCODER_TASK_PRIORITY
-        int "Shared Task Priority"
-        default 10
-        help
-            Priority for the shared rotary encoder processing task.
+            configured and run simultaneously.
 
     config ROTARY_ENCODER_POLLING_MS
         int "Polling Interval (ms)"
