feat(core): add synapse_utils library and refactor all config parsers
Introduces a new core utility library, `synapse_utils`, to centralize
common helper functions and reduce code duplication across modules.
This commit also includes a comprehensive refactoring of all existing
module `parse_config` functions to adopt this new library.

Key Changes:

- **feat(core): Add `synapse_utils` library**
  - Provides safe and reusable functions for common tasks, starting
    with `synapse_safe_strncpy` and a suite of type-safe JSON parsing
    helpers (`synapse_config_get_string_from_node`, etc.).

- **refactor(modules): Standardize all `parse_config` functions**
  - All modules in the project have been updated to use the new
    `synapse_utils` helpers for configuration parsing.
  - This results in cleaner, more concise, and more robust code that
    consistently follows the "set defaults -> override from JSON -> validate"
    pattern.

- **docs:** Adds a new `utils_api.md` reference and updates the
  `configuration_management.md` convention to reflect the new best
  practices.

--- a/components/core/CMakeLists.txt
+++ b/components/core/CMakeLists.txt
@@ -12,6 +12,7 @@ set(SRCS
     "src/service_locator.c"
     "src/system_manager.c"
     "src/task_pool_manager.c"
+    "src/synapse_utils.c"
 )
 
 # --- Synapse Build Automation ---
