feat(core): add assert and guard macros for improved robustness
Introduces two new powerful macros, `SYNAPSE_ASSERT` and `SYNAPSE_GUARD`,
to enhance code safety, readability, and the overall developer experience.

- **`SYNAPSE_ASSERT`:** A custom assertion macro that provides descriptive
  failure messages and can be compiled out in release builds via Kconfig.
  It is designed to catch logical programming errors during development.

- **`SYNAPSE_GUARD`:** A utility macro that simplifies error handling by
  providing a compact, single-line replacement for common `if-return`
  guard clauses, making the code cleaner and more concise.

This commit also includes comprehensive documentation for these new
features, including a new convention guide (`assertion_and_guards.md`)
and a detailed API reference (`assert_and_guards_api.md`).

--- a/components/core/Kconfig
+++ b/components/core/Kconfig
@@ -264,3 +264,18 @@
                 Priority for the background worker tasks.
 
     endmenu
+
+    menu "Debugging & Assertions"
+
+        config SYNAPSE_ENABLE_ASSERTS
+            bool "Enable Synapse Assertions"
+            default y
+            help
+                Enable custom SYNAPSE_ASSERT() macros. When enabled, these asserts
+                will check for critical logical errors during development and halt
+                the system with a descriptive message if an assertion fails.
+                
+                Disable this for release builds to remove the assertion checks
+                and slightly improve performance and reduce code size.
+
+    endmenu
