feat(core): add build-time JSON configuration validator
Implements an automated validation system for all `module.json` and
`config.json` files, executed via CMake during the build process.

This new feature significantly improves developer experience and system
robustness by catching configuration errors before compilation.

Key components:
- **`validate_jsons.py`:** A new Python script that uses `jsonschema`
  to validate JSON files against predefined schemas.
- **Schema Files:** Introduces a global `module_schema.json` and a
  pattern for module-specific `schema.json` files.
- **CMake Integration:** A new `validate_configs.cmake` script discovers
  all relevant JSON files and invokes the validator, halting the build
  on any validation failure with a descriptive error message.

Additionally, this commit includes fixes for all existing `module.json`
files to comply with the new schema and adds comprehensive documentation
for the new validation tool.

--- a/components/core/CMakeLists.txt
+++ b/components/core/CMakeLists.txt
@@ -16,6 +16,9 @@ set(SRCS
 )
 
 # --- Synapse Build Automation ---
+# Include and run the script to validate module configurations
+include(${CMAKE_CURRENT_LIST_DIR}/validate_configs.cmake)
+validate_synapse_configs() # This function sets up the validation target
 
 # ჩასვით და გაუშვით სკრიპტი, რომელიც აგროვებს დეცენტრალიზებულ კონფიგურაციებს
 include(${CMAKE_CURRENT_LIST_DIR}/collect_configs.cmake)
