feat(ui): Implement modular plug-and-play UI architecture
This commit introduces a revolutionary, decentralized UI architecture, transforming the `ui_manager` from a static orchestrator into a dynamic "stage manager" for UI components. This change is a cornerstone for framework scalability and enables a true "plug-and-play" ecosystem for modules.

**Architectural Overhaul (Breaking Change):**

- **Decentralized UI Logic:** Modules are now responsible for their own UI. The `ui_manager` no longer has hardcoded knowledge of specific screens like "Relay Control". Instead, it provides a generic canvas.

- **Contract-Based Integration:** A new `ui_interface.h` establishes a formal contract (`ui_component_t`) that modules use to register their UI elements. This contract includes render and event handling callbacks.

- **Service-Based Registration:** The `ui_manager` now exposes a `ui_manager_api_t` service, allowing modules to dynamically `register_components` and `unregister_components`.

- **Automated Lifecycle:** The `System Manager` has been updated with new `ui_init` and `ui_deinit` hooks in the module lifecycle. It automatically calls these functions after a module starts and before it stops, ensuring UI components are added and removed safely and dynamically.

**New Features & Improvements:**

- **feat(wifi):** The `wifi_manager` now features its own UI component, adding a "WiFi Status" screen to the main menu that displays connection status, SSID, and IP address.
- **refactor(relay):** The `relay_actuator` module has been fully refactored to adopt the new architecture. Its UI logic is now encapsulated in `relay_actuator_ui.c`.
- **improve(ux):** The main menu now displays formatted, unique instance names (e.g., "Main Light") instead of generic module types.
- **improve(ux):** The UI now preserves the last selected menu position when navigating back from a component screen, significantly enhancing user experience.

**Fixes:**

- **fix(ui):** Resolved a critical navi

--- a/components/modules/actuators/relay_actuator/CMakeLists.txt
+++ b/components/modules/actuators/relay_actuator/CMakeLists.txt
@@ -16,6 +16,9 @@ if(DEFINED CONFIG_MODULE_RELAY_ACTUATOR_ENABLED)
         message(STATUS "Relay Actuator Module: ENABLED - კომპილირდება სრული ფუნქციონალით")
         idf_component_register(
             SRCS "src/relay_actuator.c"
+            "src/relay_actuator_ui.c"
+            "src/relay_actuator_cmd.c"
+            "src/relay_actuator_events.c"
             INCLUDE_DIRS "include"
             REQUIRES 
                 core 
