--- a/components/modules/actuators/relay_actuator/config.json
+++ b/components/modules/actuators/relay_actuator/config.json
@@ -8,5 +8,15 @@
         "active_level": 0,
         "initial_state": "off"
     }
+  },
+    {
+    "type": "relay_actuator",
+    "enabled": true,
+    "config": {
+        "instance_name": "room_light",
+        "gpio_pin": 5,
+        "active_level": 0,
+        "initial_state": "off"
+    }
   }
 ]
